--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import-normalize;
 
-/* body {
+body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -36,4 +36,4 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
-} */
+}
