--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,10 @@
-@import "modern-normalize";
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
+@import-normalize @import "modern-normalize";
 
 body {
   font-family: sans-serif;
   line-height: 1.5;
 }
+
 h1,
 h2,
 h3,
@@ -27,25 +14,15 @@ h6,
 p {
   margin: 0;
 }
+
 ul,
 ol {
   margin: 0;
   padding: 0;
-  list-style: none;
 }
+
 img {
   display: block;
   max-width: 100%;
   height: auto;
-}
-
-#root {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
 }
